WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198975
Non-standard Error properties should not be enumerable
https://bugs.webkit.org/show_bug.cgi?id=198975
Summary
Non-standard Error properties should not be enumerable
Alexey Shvayka
Reported
2019-06-18 13:35:38 PDT
Results for `Object.getOwnPropertyDescriptors(new Error)`: // V8 7.7.84 { "stack": { "value": "Error\n at <anonymous>:1:49", "writable": true, "enumerable": false, "configurable": true } } // SpiderMonkey 69.0a1 { "fileName": { "value": "debugger eval code", "writable": true, "enumerable": false, "configurable": true }, "lineNumber": { "value": 1, "writable": true, "enumerable": false, "configurable": true }, "columnNumber": { "value": 49, "writable": true, "enumerable": false, "configurable": true } } // ChakraCore 1.11.9.0 { "number": { "value": 0, "writable": true, "enumerable": false, "configurable": true }, "description": { "value": "", "writable": true, "enumerable": false, "configurable": true }, "stack": { "enumerable": false, "configurable": true } } // WebKit rev. 246561 { "line": { "value": 3, "writable": true, "enumerable": true, // ! "configurable": true }, "column": { "value": 58, "writable": true, "enumerable": true, // ! "configurable": true }, "stack": { "value": "global code\\nevaluateWithScopeExtension@[native code]\\n\\n_wrapCall", "writable": true, "enumerable": false, "configurable": true } }
Attachments
Patch
(3.92 KB, patch)
2019-06-18 13:39 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(3.57 MB, application/zip)
2019-06-18 14:31 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews105 for mac-highsierra-wk2
(3.41 MB, application/zip)
2019-06-18 14:41 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews117 for mac-highsierra
(3.31 MB, application/zip)
2019-06-18 15:31 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(3.13 MB, application/zip)
2019-06-18 15:50 PDT
,
EWS Watchlist
no flags
Details
Patch
(10.93 KB, patch)
2019-06-18 17:18 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Patch
(12.30 KB, patch)
2019-06-19 02:55 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Patch
(13.70 KB, patch)
2019-09-27 10:35 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2019-06-18 13:39:43 PDT
Created
attachment 372375
[details]
Patch
Mark Lam
Comment 2
2019-06-18 13:52:23 PDT
Comment on
attachment 372375
[details]
Patch r=me
EWS Watchlist
Comment 3
2019-06-18 14:31:13 PDT
Comment on
attachment 372375
[details]
Patch
Attachment 372375
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12512194
New failing tests: inspector/debugger/setPauseOnExceptions-none.html inspector/debugger/setPauseOnExceptions-uncaught.html inspector/debugger/setPauseOnExceptions-all.html js/exception-properties.html
EWS Watchlist
Comment 4
2019-06-18 14:31:15 PDT
Created
attachment 372384
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 5
2019-06-18 14:41:48 PDT
Comment on
attachment 372375
[details]
Patch
Attachment 372375
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12512267
New failing tests: inspector/debugger/setPauseOnExceptions-none.html inspector/debugger/setPauseOnExceptions-uncaught.html inspector/debugger/setPauseOnExceptions-all.html js/exception-properties.html
EWS Watchlist
Comment 6
2019-06-18 14:41:50 PDT
Created
attachment 372385
[details]
Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 7
2019-06-18 15:31:28 PDT
Comment on
attachment 372375
[details]
Patch
Attachment 372375
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12512523
New failing tests: inspector/debugger/setPauseOnExceptions-none.html inspector/debugger/setPauseOnExceptions-uncaught.html inspector/debugger/setPauseOnExceptions-all.html js/exception-properties.html
EWS Watchlist
Comment 8
2019-06-18 15:31:30 PDT
Created
attachment 372392
[details]
Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9
2019-06-18 15:50:44 PDT
Comment on
attachment 372375
[details]
Patch
Attachment 372375
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/12512595
New failing tests: js/exception-properties.html
EWS Watchlist
Comment 10
2019-06-18 15:50:46 PDT
Created
attachment 372395
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.5
Mark Lam
Comment 11
2019-06-18 15:52:31 PDT
Comment on
attachment 372375
[details]
Patch Looks like this broke some tests. r- until the issue is resolved.
Alexey Shvayka
Comment 12
2019-06-18 17:18:44 PDT
Created
attachment 372410
[details]
Patch Adjust tests.
EWS Watchlist
Comment 13
2019-06-18 19:13:59 PDT
Comment on
attachment 372410
[details]
Patch
Attachment 372410
[details]
did not pass jsc-ews (mac): Output:
https://webkit-queues.webkit.org/results/12514862
New failing tests: mozilla-tests.yaml/js1_5/Array/regress-101964.js.mozilla-llint microbenchmarks/let-for-in.js.default microbenchmarks/let-for-in.js.ftl-eager-no-cjit-b3o1 microbenchmarks/let-for-in.js.dfg-maximal-flush-validate-no-cjit microbenchmarks/let-for-in.js.ftl-no-cjit-small-pool microbenchmarks/let-for-in.js.ftl-no-cjit-validate-sampling-profiler microbenchmarks/let-for-in.js.no-llint microbenchmarks/let-for-in.js.no-ftl microbenchmarks/let-for-in.js.ftl-eager microbenchmarks/let-for-in.js.dfg-eager-no-cjit-validate microbenchmarks/let-for-in.js.no-cjit-validate-phases microbenchmarks/let-for-in.js.dfg-eager microbenchmarks/let-for-in.js.ftl-no-cjit-b3o0 microbenchmarks/let-for-in.js.ftl-eager-no-cjit microbenchmarks/let-for-in.js.ftl-no-cjit-no-inline-validate ChakraCore.yaml/ChakraCore/test/Error/NativeErrors.js.default microbenchmarks/let-for-in.js.no-cjit-collect-continuously microbenchmarks/let-for-in.js.bytecode-cache microbenchmarks/let-for-in.js.ftl-no-cjit-no-put-stack-validate microbenchmarks/let-for-in.js.mini-mode mozilla-tests.yaml/js1_5/Array/regress-101964.js.mozilla-ftl-eager-no-cjit-validate-phases apiTests
jsc-armv7 EWS
Comment 14
2019-06-18 23:06:20 PDT
Comment on
attachment 372410
[details]
Patch
Attachment 372410
[details]
did not pass jsc-armv7-ews (jsc-only): Output:
https://webkit-queues.webkit.org/results/12516558
New failing tests: microbenchmarks/let-for-in.js.dfg-maximal-flush-validate-no-cjit microbenchmarks/let-for-in.js.default microbenchmarks/let-for-in.js.no-cjit-validate-phases microbenchmarks/let-for-in.js.no-llint microbenchmarks/let-for-in.js.dfg-eager-no-cjit-validate ChakraCore.yaml/ChakraCore/test/Error/NativeErrors.js.default microbenchmarks/let-for-in.js.no-cjit-collect-continuously microbenchmarks/let-for-in.js.dfg-eager microbenchmarks/let-for-in.js.mini-mode apiTests
Alexey Shvayka
Comment 15
2019-06-19 02:55:57 PDT
Created
attachment 372451
[details]
Patch Fix some more tests.
Alexey Shvayka
Comment 16
2019-09-27 10:35:05 PDT
Created
attachment 379739
[details]
Patch Rebase patch and revert modification of ChakraCore test.
WebKit Commit Bot
Comment 17
2019-09-27 11:32:53 PDT
Comment on
attachment 379739
[details]
Patch Clearing flags on attachment: 379739 Committed
r250436
: <
https://trac.webkit.org/changeset/250436
>
WebKit Commit Bot
Comment 18
2019-09-27 11:32:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 19
2019-09-27 11:33:26 PDT
<
rdar://problem/55788943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug