Non-standard Error properties should not be enumerable https://bugs.webkit.org/show_bug.cgi?id=198975

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-09-27
Reviewed by Ross Kirsling.

JSTests:

* ChakraCore/test/Error/NativeErrors_v4.baseline-jsc: Adjust expectations.
* microbenchmarks/let-for-in.js: Adjust test.
* test262/expectations.yaml: Mark 6 test cases as passing.

Source/JavaScriptCore:

Define non-standard Error properties "line", "column", and "sourceURL" as non-enumerable to match other engines.

* runtime/ErrorInstance.cpp:
(JSC::ErrorInstance::materializeErrorInfoIfNeeded):

LayoutTests:

* inspector/debugger/resources/exception.js: Introduce `stringifyError` helper.
* inspector/debugger/setPauseOnExceptions-all.html:
* inspector/debugger/setPauseOnExceptions-none.html:
* inspector/debugger/setPauseOnExceptions-uncaught.html:
* js/exception-properties-expected.txt:
* js/script-tests/exception-properties.js:

Canonical link: https://commits.webkit.org/215864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250436 268f45cc-cd09-0410-ab3c-d52691b4dbfc