JSTests/microbenchmarks/let-for-in.js
@@ -8,8 +8,14 @@ function foo(o) {
 }
 noInline(foo);
 
+function Bar() {
+    this.line = 1;
+    this.column = 2;
+    this.stack = "str";
+}
+
 var total = 0;
 for (let j = 0; j < 100000; ++j)
-    total += foo(new Error);
+    total += foo(new Bar);
 if (total != 300000)
     throw new Error("Bad result: " + total);
